[package]
name = "meeting-summarizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
async-stream = "0.3.5"
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.3.3" }
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.3.3" }
candle-transformers = { git = "https://github.com/huggingface/candle.git", version = "0.3.3" }
clap = "4.4.18"
futures = "0.3.30"
hf-hub = "0.3.2"
tokenizers = "0.15.1"
